--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "angular-svg-icon": "^12.0.0",
+    "ngx-smart-modal": "^7.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
