--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@swimlane/ngx-graph": "^7.2.0",
     "angular-svg-icon": "^12.0.0",
+    "graphdracula": "^1.3.0",
     "ngx-smart-modal": "^7.4.1",
+    "raphael": "^2.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "web-animations-js": "^2.3.2",
