--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.1.0",
     "@swimlane/ngx-graph": "^7.2.0",
     "angular-svg-icon": "^12.0.0",
+    "cytoscape": "^3.19.1",
     "graphdracula": "^1.3.0",
     "ngx-smart-modal": "^7.4.1",
     "raphael": "^2.3.0",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "~12.1.4",
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.0",
+    "@types/cytoscape": "^3.14.17",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
