--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/cytoscape": "^3.14.17",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/three": "^0.131.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
